exports[`test the round button handling an onclick event 1`] = `
<button
  className="bcvRqZ"
  onClick={[Function]}
  type="button">
  ButtonValue
</button>
`;

exports[`test the round button handling an onclick event 2`] = `
<button
  className="bcvRqZ"
  onClick={[Function]}
  type="button">
  ButtonValue
</button>
`;

exports[`test the round button matches the snapshot 1`] = `
<button
  className="bcvRqZ"
  type="button">
  ButtonValue
</button>
`;

exports[`test the round button with button type given matches the snapshot 1`] = `
<button
  className="bcvRqZ"
  type="button">
  ButtonValue
</button>
`;
